:package: create script js

--- a/nlw-setup/index.html
+++ b/nlw-setup/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Roboto+Mono:wght@600;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +15,42 @@
         <img src="./assets/logo.svg" alt="logomarca do aplicativo habits">
         <button>
           <img src="./assets/plus.svg" alt="ícone sinal de mais roxo">
-          Registrar o meu dia</button>
+          <div>
+            Registrar o meu dia
+          </div>
+          </button>
       </header>
-      <input type="checkbox">
-      <input type="checkbox">
+      <form id="form-habits">
+        <div class="habits">
+          <div class="habit" data-name="run">🏋🏾‍♂️</div>
+          <div class="habit" data-name="technologist">🧑🏾‍💻</div>
+          <div class="habit" data-name="food">🥗</div>
+          <div class="habit" data-name="book">📚</div>
+          <div class="habit" data-name="studant">👨🏾‍🎓</div>
+
+          <!-- <div class="habit"></div>
+          <div class="habit"></div>
+          <div class="habit"></div> -->
+        </div>
+        <div class="days">
+          <!-- <div class="day">
+            <div>22/01</div>
+            <input type="checkbox" name="run">
+            <input type="checkbox" name="water">
+            <input type="checkbox" name="food">
+          </div>
+
+          <div class="days">
+            <div class="day">
+              <div>23/01</div>
+              <input type="checkbox" name="run">
+              <input type="checkbox" name="water">
+              <input type="checkbox" name="food">
+            </div>
+          </div> -->
+        </div>
+      </form>
+      <script src="https://cdn.jsdelivr.net/gh/maykbrito/libs/NLWSetup/source/NLWSetup.js"></script>
+      <script src="./script.js"></script>
     </body>
 </html>
