--- a/nlw-setup/index.html
+++ b/nlw-setup/index.html
@@ -33,7 +33,9 @@
           <div class="habit" data-name="studant">👨🏾‍🎓</div>
           <div class="habit" data-name="to sleep">😴</div>
         </div>
-        <div class="days"></div>
+        <div>
+          <div class="days"></div>
+        </div>
       </form>
       <footer>
         <div class="footer-content">
