:seedling: add buttons primary

--- a/botoes-cursores/index.html
+++ b/botoes-cursores/index.html
@@ -10,9 +10,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/phosphor-icons"></script>
 </head>
 <body>
-<button class="primary">Default Primary</button>
+    <button class="primary">Default Primary</button>
+    <button class="primary-hover">Hover Primary</button>
+    <button class="primary">Focus Primary</button>
+    <button class="primary" disabled>disabled Primary</button>
+    <button class="primary loading"><i class="ph-spinner-gap"></i>Loading Primary</button>
+    <button class="primary movable"><i class="ph-list"></i>Movable Primary</button>
 
+    <button class="secondary">Default Secondary</button>
+    <button class="secondary">Hover Secondary</button>
+    <button class="secondary">Focus Secondary</button>
+    <button class="secondary" disabled>Disabled Secondary</button>
+    <button class="secondary loading"><i class="ph-spinner-gap"></i>Loading Secondary</button>
+    <button class="secondary movable"><i class="ph-list"></i>Movable Secondary</button>
+    
 </body>
 </html>
