--- a/botoes-cursores/index.html
+++ b/botoes-cursores/index.html
@@ -14,16 +14,16 @@
 </head>
 <body>
     <button class="primary">Default Primary</button>
-    <button class="primary-hover">Hover Primary</button>
-    <button class="primary">Focus Primary</button>
+    <button class="primary hover">Hover Primary</button>
+    <button class="primary focus">Focus Primary</button>
     <button class="primary" disabled>disabled Primary</button>
     <button class="primary loading"><i class="ph-spinner-gap"></i>Loading Primary</button>
     <button class="primary movable"><i class="ph-list"></i>Movable Primary</button>
 
-    <button class="secondary">Default Secondary</button>
-    <button class="secondary">Hover Secondary</button>
-    <button class="secondary">Focus Secondary</button>
-    <button class="secondary" disabled>Disabled Secondary</button>
+    <button class="secondary ">Default Secondary</button>
+    <button class="secondary hover">Hover Secondary</button>
+    <button class="secondary focus">Focus Secondary</button>
+    <button class="secondary disabled" disabled>Disabled Secondary</button>
     <button class="secondary loading"><i class="ph-spinner-gap"></i>Loading Secondary</button>
     <button class="secondary movable"><i class="ph-list"></i>Movable Secondary</button>
     
