:seedling: add button tertiary

--- a/botoes-cursores/index.html
+++ b/botoes-cursores/index.html
@@ -26,6 +26,13 @@
     <button class="secondary disabled" disabled>Disabled Secondary</button>
     <button class="secondary loading"><i class="ph-spinner-gap"></i>Loading Secondary</button>
     <button class="secondary movable"><i class="ph-list"></i>Movable Secondary</button>
+
+    <button class="tertiary">Default Tertiary</button>
+    <button class="tertiary">Hover Tertiary</button>
+    <button class="tertiary focuss ">Focus Tertiary</button>
+    <button class="tertiary " disabled>Disabled Tertiary</button>
+    <button class="tertiary loadingg"><i class="ph-spinner-gap"></i>Loading Tertiary</button>
+    <button class="tertiary movablee"><i class="ph-list"></i>Movable Tertiary</button>
     
 </body>
 </html>
