:white_check_mark: add column

--- a/botoes-cursores/index.html
+++ b/botoes-cursores/index.html
@@ -13,26 +13,30 @@
     <script src="https://unpkg.com/phosphor-icons"></script>
 </head>
 <body>
-    <button class="primary">Default Primary</button>
-    <button class="primary hover">Hover Primary</button>
-    <button class="primary focus">Focus Primary</button>
-    <button class="primary" disabled>disabled Primary</button>
-    <button class="primary loading"><i class="ph-spinner-gap"></i>Loading Primary</button>
-    <button class="primary movable"><i class="ph-list"></i>Movable Primary</button>
-
-    <button class="secondary ">Default Secondary</button>
-    <button class="secondary hover">Hover Secondary</button>
-    <button class="secondary focus">Focus Secondary</button>
-    <button class="secondary disabled" disabled>Disabled Secondary</button>
-    <button class="secondary loading"><i class="ph-spinner-gap"></i>Loading Secondary</button>
-    <button class="secondary movable"><i class="ph-list"></i>Movable Secondary</button>
-
-    <button class="tertiary">Default Tertiary</button>
-    <button class="tertiary">Hover Tertiary</button>
-    <button class="tertiary focuss ">Focus Tertiary</button>
-    <button class="tertiary " disabled>Disabled Tertiary</button>
-    <button class="tertiary loadingg"><i class="ph-spinner-gap"></i>Loading Tertiary</button>
-    <button class="tertiary movablee"><i class="ph-list"></i>Movable Tertiary</button>
+    <section>
+        <button class="primary">Default Primary</button>
+        <button class="primary hover">Hover Primary</button>
+        <button class="primary focus">Focus Primary</button>
+        <button class="primary" disabled>disabled Primary</button>
+        <button class="primary loading"><i class="ph-spinner-gap"></i>Loading Primary</button>
+        <button class="primary movable"><i class="ph-list"></i>Movable Primary</button>
+    </section>
+    <section>
+        <button class="secondary ">Default Secondary</button>
+        <button class="secondary hoverr">Hover Secondary</button>
+        <button class="secondary focus">Focus Secondary</button>
+        <button class="secondary disabled" disabled>Disabled Secondary</button>
+        <button class="secondary loading"><i class="ph-spinner-gap"></i>Loading Secondary</button>
+        <button class="secondary movable"><i class="ph-list"></i>Movable Secondary</button>
+    </section>
+    <section>
+        <button class="tertiary">Default Tertiary</button>
+        <button class="tertiary">Hover Tertiary</button>
+        <button class="tertiary focuss ">Focus Tertiary</button>
+        <button class="tertiary " disabled>Disabled Tertiary</button>
+        <button class="tertiary loadingg"><i class="ph-spinner-gap"></i>Loading Tertiary</button>
+        <button class="tertiary movablee"><i class="ph-list"></i>Movable Tertiary</button>
+    </section>
     
 </body>
 </html>
