:white_check_mark: add table

--- a/botoes-cursores/index.html
+++ b/botoes-cursores/index.html
@@ -13,30 +13,65 @@
     <script src="https://unpkg.com/phosphor-icons"></script>
 </head>
 <body>
+    <header class="title">
+        <h1>Tipos de botão</h1>
+        <p>Dentro de um layout, botões servem para destacar ações importantes a serem tomadas. </p>
+        <p>Acompanhe abaixo um exemplo de tipos e propriedades.</p>
+        <p>Interaja com os botões e observe a mudança de aparência e de cursores</p>
+    </header>
     <section>
-        <button class="primary">Default Primary</button>
-        <button class="primary hover">Hover Primary</button>
-        <button class="primary focus">Focus Primary</button>
-        <button class="primary" disabled>disabled Primary</button>
-        <button class="primary loading"><i class="ph-spinner-gap"></i>Loading Primary</button>
-        <button class="primary movable"><i class="ph-list"></i>Movable Primary</button>
+        <table>
+            <tr>
+                <th class="type-button"></th>
+                <th>BOTÃO PRIMÁRIO</th>
+                <th>BOTÃO SECUNDÁRIO</th>
+                <th>BOTÃO TERCIÁRIO</th>
+                <th>CURSOR</th>
+            </tr>
+                <tr>
+                    <td id="btn-DEFAULT"></td>
+                    <td><button class="primary">Default Primary</button></td>
+                    <td ><button class="secondary ">Default Secondary</button></td>
+                    <td><button class="tertiary">Default Tertiary</button></td>
+                </tr>
+
+                <tr>
+                    <td id="btn-HOVER"></td>
+                    <td><button class="primary hover">Hover Primary</button></td>
+                    <td ><button class="secondary hoverr">Hover Secondary</button></td>
+                    <button class="tertiary">Hover Tertiary</button>
+                </tr>
+
+                <tr>
+                    <td id="btn-FOCUS"></td>
+                    <td ><button class="primary focus">Focus Primary</button></td>
+                    <td ><button class="secondary focus">Focus Secondary</button> </td>
+                    <td><button class="tertiary focuss ">Focus Tertiary</button></td>
+                </tr>
+
+                <tr>
+                    <td id="btn-DISABLED"></td>
+                    <td><button class="primary" disabled>disabled Primary</button></td>
+                    <td ><button class="secondary disabled" disabled>Disabled Secondary</button></td>
+                    <td><button class="tertiary " disabled>Disabled Tertiary</button></td>
+                </tr>
+
+                <tr>
+                    <td id="btn-LOANDING"></td>
+                    <td><button class="primary loading"><i class="ph-spinner-gap"></i>Loading Primary</button>
+                    <td><button class="secondary loading"><i class="ph-spinner-gap"></i>Loading Secondary</button></td>
+                    <td><button class="tertiary loadingg"><i class="ph-spinner-gap"></i>Loading Tertiary</button></td>
+                </tr>
+
+                <tr>
+                    <td id="btn-MOVABLE"></td>
+                    <td ><button class="primary movable"><i class="ph-list"></i>Movable Primary</button></td>
+                    <td><button class="secondary movable"><i class="ph-list"></i>Movable Secondary</button></td>
+                    <td><button class="tertiary movablee"><i class="ph-list"></i>Movable Tertiary</button></td>
+                </tr>
+        </table>
     </section>
-    <section>
-        <button class="secondary ">Default Secondary</button>
-        <button class="secondary hoverr">Hover Secondary</button>
-        <button class="secondary focus">Focus Secondary</button>
-        <button class="secondary disabled" disabled>Disabled Secondary</button>
-        <button class="secondary loading"><i class="ph-spinner-gap"></i>Loading Secondary</button>
-        <button class="secondary movable"><i class="ph-list"></i>Movable Secondary</button>
-    </section>
-    <section>
-        <button class="tertiary">Default Tertiary</button>
-        <button class="tertiary">Hover Tertiary</button>
-        <button class="tertiary focuss ">Focus Tertiary</button>
-        <button class="tertiary " disabled>Disabled Tertiary</button>
-        <button class="tertiary loadingg"><i class="ph-spinner-gap"></i>Loading Tertiary</button>
-        <button class="tertiary movablee"><i class="ph-list"></i>Movable Tertiary</button>
-    </section>
+    
     
 </body>
 </html>
