:white_check_mark: add image

--- a/botoes-cursores/index.html
+++ b/botoes-cursores/index.html
@@ -33,13 +33,15 @@
                     <td><button class="primary">Default Primary</button></td>
                     <td ><button class="secondary ">Default Secondary</button></td>
                     <td><button class="tertiary">Default Tertiary</button></td>
+                    <td><img src="./image/default-cursor.svg" alt=""></td>
                 </tr>
 
                 <tr>
                     <td id="btn-HOVER"></td>
                     <td><button class="primary hover">Hover Primary</button></td>
                     <td ><button class="secondary hoverr">Hover Secondary</button></td>
-                    <button class="tertiary">Hover Tertiary</button>
+                    <td><button class="tertiary">Hover Tertiary</button></td>
+                    <td><img src="./image/houver-cursor.svg" alt=""></td>
                 </tr>
 
                 <tr>
@@ -47,6 +49,8 @@
                     <td ><button class="primary focus">Focus Primary</button></td>
                     <td ><button class="secondary focus">Focus Secondary</button> </td>
                     <td><button class="tertiary focuss ">Focus Tertiary</button></td>
+                    <td><img src="./image/focus-cursor.svg" alt=""></td>
+                    <td><img src="./image/focus-cursor.svg" alt=""></td>
                 </tr>
 
                 <tr>
@@ -54,6 +58,7 @@
                     <td><button class="primary" disabled>disabled Primary</button></td>
                     <td ><button class="secondary disabled" disabled>Disabled Secondary</button></td>
                     <td><button class="tertiary " disabled>Disabled Tertiary</button></td>
+                    <td><img src="./image/disabled-cursor.svg" alt=""></td>
                 </tr>
 
                 <tr>
@@ -61,6 +66,7 @@
                     <td><button class="primary loading"><i class="ph-spinner-gap"></i>Loading Primary</button>
                     <td><button class="secondary loading"><i class="ph-spinner-gap"></i>Loading Secondary</button></td>
                     <td><button class="tertiary loadingg"><i class="ph-spinner-gap"></i>Loading Tertiary</button></td>
+                    <td><img src="./image/loading-cursor.svg" alt=""></td>
                 </tr>
 
                 <tr>
@@ -68,6 +74,7 @@
                     <td ><button class="primary movable"><i class="ph-list"></i>Movable Primary</button></td>
                     <td><button class="secondary movable"><i class="ph-list"></i>Movable Secondary</button></td>
                     <td><button class="tertiary movablee"><i class="ph-list"></i>Movable Tertiary</button></td>
+                    <td><img src="./image/movable-cursor.svg" alt=""></td>
                 </tr>
         </table>
     </section>
