:white_check_mark: add footer

--- a/botoes-cursores/index.html
+++ b/botoes-cursores/index.html
@@ -78,7 +78,20 @@
                 </tr>
         </table>
     </section>
-    
-    
 </body>
+
+<footer>
+    <div class="footer-content">
+        <p>
+            Copyright &copy; 2022, Rodrigo Xavier - Todos os direitos reservados
+        </p>
+        <div class="social-list">
+            <ul>
+                <li><a href="https://www.linkedin.com/in/rxaviersantos/"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/rxaviersantos"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://twitter.com/rxaviersantos"><i class="fa-brands fa-twitter"></i></a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
 </html>
