:white_check_mark: update table

--- a/botoes-cursores/index.html
+++ b/botoes-cursores/index.html
@@ -29,7 +29,7 @@
                 <th>CURSOR</th>
             </tr>
                 <tr>
-                    <td id="btn-DEFAULT"></td>
+                    <td id="btn-text">DEFAULT</td>
                     <td><button class="primary">Default Primary</button></td>
                     <td ><button class="secondary ">Default Secondary</button></td>
                     <td><button class="tertiary">Default Tertiary</button></td>
@@ -37,7 +37,7 @@
                 </tr>
 
                 <tr>
-                    <td id="btn-HOVER"></td>
+                    <td id="btn-text">HOVER</td>
                     <td><button class="primary hover">Hover Primary</button></td>
                     <td ><button class="secondary hoverr">Hover Secondary</button></td>
                     <td><button class="tertiary">Hover Tertiary</button></td>
@@ -45,16 +45,15 @@
                 </tr>
 
                 <tr>
-                    <td id="btn-FOCUS"></td>
+                    <td id="btn-text">FOCUS</td>
                     <td ><button class="primary focus">Focus Primary</button></td>
                     <td ><button class="secondary focus">Focus Secondary</button> </td>
                     <td><button class="tertiary focuss ">Focus Tertiary</button></td>
                     <td><img src="./image/focus-cursor.svg" alt=""></td>
-                    <td><img src="./image/focus-cursor.svg" alt=""></td>
                 </tr>
 
                 <tr>
-                    <td id="btn-DISABLED"></td>
+                    <td id="btn-text">DISABLED</td>
                     <td><button class="primary" disabled>disabled Primary</button></td>
                     <td ><button class="secondary disabled" disabled>Disabled Secondary</button></td>
                     <td><button class="tertiary " disabled>Disabled Tertiary</button></td>
@@ -62,7 +61,7 @@
                 </tr>
 
                 <tr>
-                    <td id="btn-LOANDING"></td>
+                    <td id="btn-text">LOANDING</td>
                     <td><button class="primary loading"><i class="ph-spinner-gap"></i>Loading Primary</button>
                     <td><button class="secondary loading"><i class="ph-spinner-gap"></i>Loading Secondary</button></td>
                     <td><button class="tertiary loadingg"><i class="ph-spinner-gap"></i>Loading Tertiary</button></td>
@@ -70,7 +69,7 @@
                 </tr>
 
                 <tr>
-                    <td id="btn-MOVABLE"></td>
+                    <td id="btn-text">MOVABLE</td>
                     <td ><button class="primary movable"><i class="ph-list"></i>Movable Primary</button></td>
                     <td><button class="secondary movable"><i class="ph-list"></i>Movable Secondary</button></td>
                     <td><button class="tertiary movablee"><i class="ph-list"></i>Movable Tertiary</button></td>
@@ -79,7 +78,6 @@
         </table>
     </section>
 </body>
-
 <footer>
     <div class="footer-content">
         <p>
