:white_check_mark: update button

--- a/botoes-cursores/index.html
+++ b/botoes-cursores/index.html
@@ -17,7 +17,6 @@
         <h1>Tipos de botão</h1>
         <p>Dentro de um layout, botões servem para destacar ações importantes a serem tomadas. </p>
         <p>Acompanhe abaixo um exemplo de tipos e propriedades.</p>
-        <p>Interaja com os botões e observe a mudança de aparência e de cursores</p>
     </header>
     <section>
         <table>
@@ -30,7 +29,7 @@
             </tr>
                 <tr>
                     <td id="btn-text">DEFAULT</td>
-                    <td><button class="primary">Default Primary</button></td>
+                    <td><button class="primary default">Default Primary</button></td>
                     <td ><button class="secondary ">Default Secondary</button></td>
                     <td><button class="tertiary">Default Tertiary</button></td>
                     <td><img src="./image/default-cursor.svg" alt=""></td>
@@ -40,13 +39,13 @@
                     <td id="btn-text">HOVER</td>
                     <td><button class="primary hover">Hover Primary</button></td>
                     <td ><button class="secondary hoverr">Hover Secondary</button></td>
-                    <td><button class="tertiary">Hover Tertiary</button></td>
+                    <td><button class="tertiary hoveer">Hover Tertiary</button></td>
                     <td><img src="./image/houver-cursor.svg" alt=""></td>
                 </tr>
 
                 <tr>
                     <td id="btn-text">FOCUS</td>
-                    <td ><button class="primary focus">Focus Primary</button></td>
+                    <td ><button class="primary focuus">Focus Primary</button></td>
                     <td ><button class="secondary focus">Focus Secondary</button> </td>
                     <td><button class="tertiary focuss ">Focus Tertiary</button></td>
                     <td><img src="./image/focus-cursor.svg" alt=""></td>
@@ -54,7 +53,7 @@
 
                 <tr>
                     <td id="btn-text">DISABLED</td>
-                    <td><button class="primary" disabled>disabled Primary</button></td>
+                    <td><button class="primary disabled" disabled>disabled Primary</button></td>
                     <td ><button class="secondary disabled" disabled>Disabled Secondary</button></td>
                     <td><button class="tertiary " disabled>Disabled Tertiary</button></td>
                     <td><img src="./image/disabled-cursor.svg" alt=""></td>
@@ -62,23 +61,37 @@
 
                 <tr>
                     <td id="btn-text">LOANDING</td>
-                    <td><button class="primary loading"><i class="ph-spinner-gap"></i>Loading Primary</button>
-                    <td><button class="secondary loading"><i class="ph-spinner-gap"></i>Loading Secondary</button></td>
-                    <td><button class="tertiary loadingg"><i class="ph-spinner-gap"></i>Loading Tertiary</button></td>
+                    <td><button class="primary loandinng"><i class="ph-spinner-gap"></i>Loading Primary</button></td>
+                    <td><button class="secondary loadingg"><i class="ph-spinner-gap"></i>Loading Secondary</button></td>
+                    <td><button class="tertiary loading"><i class="ph-spinner-gap"></i>Loading Tertiary</button></td>
                     <td><img src="./image/loading-cursor.svg" alt=""></td>
                 </tr>
 
                 <tr>
                     <td id="btn-text">MOVABLE</td>
-                    <td ><button class="primary movable"><i class="ph-list"></i>Movable Primary</button></td>
+                    <td ><button class="primary movablee"><i class="ph-list"></i>Movable Primary</button></td>
                     <td><button class="secondary movable"><i class="ph-list"></i>Movable Secondary</button></td>
-                    <td><button class="tertiary movablee"><i class="ph-list"></i>Movable Tertiary</button></td>
+                    <td><button class="tertiary movable"><i class="ph-list"></i>Movable Tertiary</button></td>
                     <td><img src="./image/movable-cursor.svg" alt=""></td>
                 </tr>
         </table>
     </section>
+    <!-- <section>
+        <header class="subtitle">
+            <h1>Teste os botões</h1>
+            <p>Interaja com os botões e observe a mudança de aparência e de cursores</p>
+        </header>
+        <tr class="frame">
+            <td><button class="primary default">Default Primary</button></td>
+            <td ><button class="secondary ">Default Secondary</button></td>
+        </tr>
+
+
+    </section> -->
+
+    
 </body>
-<footer>
+<!-- <footer>
     <div class="footer-content">
         <p>
             Copyright &copy; 2022, Rodrigo Xavier - Todos os direitos reservados
@@ -91,5 +104,5 @@
             </ul>
         </div>
     </div>
-</footer>
-</html>
+</footer> -->
+</html>   
