:white_check_mark: add style body

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="main">
+        <form action="" name="calculadora">
+            <input type="text" class="">
+        </form>
+    </section>
     
 </body>
 </html>
