:white_check_mark: add input type

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -11,7 +11,10 @@
 <body>
     <section class="main">
         <form action="" name="calculadora">
-            <input type="text" class="">
+            <input type="text" class="text color" name="text1" disabled>
+
+            <input type="text" class="text1 color" name="text12" value="C" 
+                 onclick="location.reload()"><br>
         </form>
     </section>
     
