:white_check_mark: update style

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -105,7 +105,7 @@
     <link rel="shortcut icon" href="./image/icon.svg" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     </script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Calculadora</title>
   </head>
 
