--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -24,9 +24,9 @@
           </div>
         </div>
         
-        <div class="btn">
+        <section class="btn">
           
-          <button class="button" onclick="del()">CE</button>
+          <button class="button" onclick="remove()">CE</button>
           <button class="button" onclick="clr()">C</button>
           <button class="button" onclick="calculate('%')"><img src="./image/porcentagem.svg" alt="porcentagem"></button>
           <button class="button btnSecondary" onclick="calculate('/')"><img src="./image/divisao.svg" alt="divisão"></button>
@@ -51,7 +51,7 @@
           <button class="button" onclick="calculate('.')">,</button>
           <button class="button btnSecondary" onclick="resultado()"><img src="./image/igualdade.svg" alt="igualdade"></button>
 
-        </div>
+        </section>
       </section>
     </main>
     <script src="script.js"></script>
