:white_check_mark: add html

--- a/cartao-embarque/index.html
+++ b/cartao-embarque/index.html
@@ -9,6 +9,75 @@
     <link rel="shortcut icon" href="./image/icon.png" type="image/x-icon">
 </head>
 <body>
+
+    <div id="boarding-pass">
+        <h1>Cartão de embarque</h1>
+        <main id="tiket">
+            <section class="top">
+                <div class="flight">
+                    <div class="number">
+                        <p>Voo</p>
+                        <strong>R995</strong>
+                    </div>
+                    <div class="date">
+                        <strong>23/05/2023</strong>
+                    </div>
+                </div>
+                <div>
+                    <div class="departure">
+                        <p>São Paulo, Brasil</p>
+                        <strong>GRU</strong>
+                        <time>17:00</time>
+                    </div>
+                    <div class="airplane">
+                        <img src="" alt="">
+                        
+                    </div>
+                    <div class="arrival">
+                        <p>São Francisco, EUA</p>
+                        <strong>SFO</strong>
+                        <time>04:48 <sup>+1</sup></time>
+                    </div>
+                </div>
+            </section>
+            <section class="middle">
+                <div class="name">
+                    <p>Passageiro</p>
+                    <strong>Rodrigo Xavier</strong>
+                </div>
+                <div class="seat">
+                    <p>Assento</p>
+                    <strong>28A</strong>
+                </div>
+            </section>
+            <section class="bottom">
+                <div class="container">
+                    <div class="boarding-inf">
+                        <dl>
+                            <dt>
+                                <p>Embarque</p>
+                                <time>16:15</time>
+                            </dt>
+                            <dt>
+                                <p>Terminal</p>
+                                <strong>2</strong>
+                            </dt>
+                            <dt>
+                                <p>Portão</p>
+                                <strong>15</strong>
+                            </dt>
+                        </dl>
+                    </div>
+                    <div class="qrcode">
+                        <img src="" alt="">
+                        <p>Grupo de embarque: 3</p>
+                    </div>  
+                </div>
+                <p><strong>Atenção:</strong> o portão fecha 16:45</p>
+            </section>
+        </main>
+        <footer>Qualquer problema procure o balcão de atendimento da sua companhia aérea</footer>
+    </div>
     
 </body>
 </html>
