:zap: atualizacoes pendentes

--- a/cartao-embarque/index.html
+++ b/cartao-embarque/index.html
@@ -16,47 +16,47 @@
     <div id="boarding-pass">
         <h1>Cartão de embarque</h1>
         <main id="tiket">
-            <section class="top">
-                <div class="flight">
+            <section class="top grid">
+                <div class="flight grid colum">
                     <div class="number">
                         <p>Voo</p>
                         <strong>R995</strong>
                     </div>
-                    <div class="date">
+                    <div class="date text-right">
+                        <p>Data</p>
                         <strong>23/05/2023</strong>
                     </div>
                 </div>
-                <div>
-                    <div class="departure">
+                <div class="grid colum">
+                    <div class="departure grid">
                         <p>São Paulo, Brasil</p>
                         <strong>GRU</strong>
                         <time>17:00</time>
                     </div>
-                    <div class="airplane">
-                        <img src="./assets/airplane.svg" alt="Avião">
+                    <div class="airplane grid">
+                        <img src="./assets/airplane.svg" alt="Icone de avião">
 
                     </div>
-                    <div class="arrival">
+                    <div class="arrival text-right grid">
                         <p>São Francisco, EUA</p>
                         <strong>SFO</strong>
                         <time>04:48 <sup>+1</sup></time>
                     </div>
                 </div>
             </section>
-            <section class="middle">
+            <section class="middle grid colum">
                 <div class="name">
                     <p>Passageiro</p>
                     <strong>Rodrigo Xavier</strong>
                 </div>
-                <div class="seat">
+                <div class="seat text-right">
                     <p>Assento</p>
                     <strong>28A</strong>
                 </div>
             </section>
             <section class="bottom">
-                <div class="container">
-                    <div class="boarding-inf">
-                        <dl>
+                <div class="container grid colum">
+                        <dl class="grid">
                             <dt>
                                 <p>Embarque</p>
                                 <time>16:15</time>
@@ -70,9 +70,9 @@
                                 <strong>15</strong>
                             </dt>
                         </dl>
-                    </div>
-                    <div class="qrcode">
-                        <img src="./assets/qr-code.svg" alt="QR Code">
+                    
+                    <div class="qrcode grid">
+                        <img src="./assets/qr-code.svg" alt="Imagem de QR Code">
                         <p>Grupo de embarque: 3</p>
                     </div>  
                 </div>
