--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -41,5 +41,120 @@
           </form>
         </div>
       </header>
+
+      <main>
+        <div class="content">
+          <section class="top">
+            <h2>Blocos recomendados</h2>
+            <div class="view">
+              <button class="btn primary">Lista</button>
+              <button class="btn secondary">Mapa</button>
+            </div>
+          </section>
+          <section class="cards">
+            <div class="card">
+              <img src="./assets/01.jpeg" alt="" />
+  
+              <div class="content">
+                <h3>O Python do vovô não sobe mais</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
+                </p>
+  
+                <div class="location">
+                  <i class="ph-map-pin-light"></i>
+                  São Paulo - SP
+                </div>
+              </div>
+            </div>
+  
+            <div class="card">
+              <img src="./assets/02.jpeg" alt="" />
+  
+              <div class="content">
+                <h3>Todo mundo null</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
+                </p>
+  
+                <div class="location">
+                  <i class="ph-map-pin-light"></i>
+                  Salvador - BA
+                </div>
+              </div>
+            </div>
+  
+            <div class="card">
+              <img src="./assets/03.jpeg" alt="" />
+  
+              <div class="content">
+                <h3>Hoje dou exception</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
+                </p>
+  
+                <div class="location">
+                  <i class="ph-map-pin-light"></i>
+                  Rio de Janeiro - RJ
+                </div>
+              </div>
+            </div>
+  
+            <div class="card">
+              <img src="./assets/01.jpeg" alt="" />
+  
+              <div class="content">
+                <h3>O Python do vovô não sobe mais</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
+                </p>
+  
+                <div class="location">
+                  <i class="ph-map-pin-light"></i>
+                  São Paulo - SP
+                </div>
+              </div>
+            </div>
+  
+            <div class="card">
+              <img src="./assets/02.jpeg" alt="" />
+  
+              <div class="content">
+                <h3>Todo mundo null</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
+                </p>
+  
+                <div class="location">
+                  <i class="ph-map-pin-light"></i>
+                  Salvador - BA
+                </div>
+              </div>
+            </div>
+  
+            <div class="card">
+              <img src="./assets/03.jpeg" alt="" />
+  
+              <div class="content">
+                <h3>Hoje dou exception</h3>
+                <p>
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint.
+                </p>
+  
+                <div class="location">
+                  <i class="ph-map-pin-light"></i>
+                  Rio de Janeiro - RJ
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </main>
 </body>
 </html>
