:package: add image

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -53,7 +53,7 @@
           </section>
           <section class="cards">
             <div class="card">
-              <img src="./assets/01.jpeg" alt="" />
+              <img src="./image/python.jpg" alt="" />
   
               <div class="content">
                 <h3>O Python do vovô não sobe mais</h3>
@@ -70,7 +70,7 @@
             </div>
   
             <div class="card">
-              <img src="./assets/02.jpeg" alt="" />
+              <img src="./image/null.jpg" alt="" />
   
               <div class="content">
                 <h3>Todo mundo null</h3>
@@ -87,7 +87,7 @@
             </div>
   
             <div class="card">
-              <img src="./assets/03.jpeg" alt="" />
+              <img src="./image/exception.jpg" alt="" />
   
               <div class="content">
                 <h3>Hoje dou exception</h3>
@@ -104,7 +104,7 @@
             </div>
   
             <div class="card">
-              <img src="./assets/01.jpeg" alt="" />
+              <img src="./image/node.jpg" alt="" />
   
               <div class="content">
                 <h3>O Python do vovô não sobe mais</h3>
@@ -121,7 +121,7 @@
             </div>
   
             <div class="card">
-              <img src="./assets/02.jpeg" alt="" />
+              <img src="./image/back-end.jpg" alt="" />
   
               <div class="content">
                 <h3>Todo mundo null</h3>
@@ -138,7 +138,7 @@
             </div>
   
             <div class="card">
-              <img src="./assets/03.jpeg" alt="" />
+              <img src="./image/ruby.png" alt="" />
   
               <div class="content">
                 <h3>Hoje dou exception</h3>
