--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Rubik:wght@400;500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +11,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="app">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+    <main id="app" class="grid">
+        <div class="box nps grid">
+            <div class="top">NPS geral</div>
+            <div class="middle grid">
+                <img src="./image/smile.svg" alt="emoji verde sorrindo">
+                Excelente
+            </div>
+            <div class="bottom">
+                <span>NPS Score</span>
+                <span>75</span>
+            </div>
+        </div>
+        <div class="box sell grid">
+            <div class="top">Vendas fechadas</div>
+            <div class="middle"></div>
+            <div class="bottom">
+                <div class="item">
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="item"></div>
+            </div>
+        </div>
+        <div class="box target grid">
+            <div class="top">Meta mensal</div>
+            <div class="middle"></div>
+            <div class="bottom"></div>
+        </div>
         <div class="box"></div>
     </main>
     
