:white_check_mark: update style

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -28,10 +28,13 @@
             <div class="middle"></div>
             <div class="bottom">
                 <div class="item">
-                    <span></span>
-                    <span></span>
+                    <span>Esperado</span>
+                    <span>100</span>
                 </div>
-                <div class="item"></div>
+                <div class="item">
+                    <span>Alcançado</span>
+                    <span>70</span>
+                </div>
             </div>
         </div>
         <div class="box target grid">
